Allow empty read in FetchDataLoaderAsDataPipe

ByteConsumer::BeginRead() may return Result::kOK with no available
read data. FetchDataLoaderAsDataPipe should handle zero read as other
ByteConsumer::Client do.

Bug: 807954
Change-Id: I47186ccc01d10c8ff18bdf749376598ee75342a7
Reviewed-on: https://chromium-review.googlesource.com/1096515
Reviewed-by: Yutaka Hirano <yhirano@chromium.org>
Commit-Queue: Kenichi Ishibashi <bashi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567503}
Former-commit-id: 48d1e0391a7d175d828ec26a56c5ec3473ea70aa